docs: add instructions for proper styling in Layout00, Layout01, and Layout02 CSS files

--- a/ReactByPrasadSir/src/components/00_tasks/layout00/Layout00.css
+++ b/ReactByPrasadSir/src/components/00_tasks/layout00/Layout00.css
@@ -1,3 +1,11 @@
+/* 
+    To see the proper styling of Layout00, go to src/index.css and comment following 3 lines:
+            @tailwind base;
+            @tailwind components;
+            @tailwind utilities;
+*/
+
+
 nav{
     background-color: red;
     height: 15vh;
