--- a/ReactByPrasadSir/src/components/00_tasks/layout01/Layout01.css
+++ b/ReactByPrasadSir/src/components/00_tasks/layout01/Layout01.css
@@ -1,3 +1,12 @@
+/* 
+    To see the proper styling of Layout01, go to src/index.css and comment following 3 lines:
+            @tailwind base;
+            @tailwind components;
+            @tailwind utilities;
+*/
+
+
+
 /* background */
 #blackit{
     background-color: #000;
