--- a/ReactByPrasadSir/src/components/00_tasks/layout02/Layout02.css
+++ b/ReactByPrasadSir/src/components/00_tasks/layout02/Layout02.css
@@ -1,3 +1,12 @@
+/* 
+    To see the proper styling of Layout02, go to src/index.css and comment following 3 lines:
+            @tailwind base;
+            @tailwind components;
+            @tailwind utilities;
+*/
+
+
+
 *{
     margin: 0;
     padding: 0;
