--- a/ReactByPrasadSir/src/components/01_jsxIntro/JsxIntro.css
+++ b/ReactByPrasadSir/src/components/01_jsxIntro/JsxIntro.css
@@ -1,3 +1,10 @@
+/* 
+    To see the proper styling of Layout02, go to src/index.css and comment following 3 lines:
+            @tailwind base;
+            @tailwind components;
+            @tailwind utilities;
+*/
+
 #jsxrelated{
     margin: 50px;
     padding: 10px;
